sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: type inverse
  var boolean: inverse=true 
               ^AlgBubbleSort1:8: error: reassignment to val
          if(i=i+1){
              ^AlgBubbleSort1:9: error: not found: value inverse
          inverse==false;
          ^AlgBubbleSort1:13: error: not found: value inverse
   	}while(inverse==true)
               ^